--- a/HW1/Homework_01_FA25.ipynb
+++ b/HW1/Homework_01_FA25.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -234,12 +234,13 @@
     "    \"\"\"\n",
     "    assert (r1 >= 0) and (r1 < r2)\n",
     "    # YOUR CODE HERE\n",
-    "    return gen.uniform(r1, r2, size=n)\n"
+    "    r = gen.uniform(size=n)\n",
+    "    return np.sqrt(r * (r2**2 - r1**2) + r1**2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -253,32 +254,23 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.499 0.285\n",
-      "1.0 0.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A correct solution should pass these tests.\n",
     "r1, r2, n = 1., 2., 1000\n",
     "gen = np.random.RandomState(seed=123)\n",
     "r = sample_disk(r1, r2, n, gen)\n",
     "assert np.all((r >= r1) & (r <= r2))\n",
-    "print(np.round(np.mean(r), 3), np.round(np.std(r), 3))\n",
-    "# assert np.allclose(np.round(np.mean(r), 3), 1.556)\n",
-    "# assert np.allclose(np.round(np.std(r), 3), 0.279)\n",
+    "# print(np.round(np.mean(r), 3), np.round(np.std(r), 3))\n",
+    "assert np.allclose(np.round(np.mean(r), 3), 1.556)\n",
+    "assert np.allclose(np.round(np.std(r), 3), 0.279)\n",
     "\n",
     "r1, r2, n = 0., 2., 1000\n",
     "r = sample_disk(r1, r2, n, gen)\n",
-    "print(np.round(np.mean(r), 3), np.round(np.std(r), 3))\n",
+    "# print(np.round(np.mean(r), 3), np.round(np.std(r), 3))\n",
     "assert np.all((r >= r1) & (r <= r2))\n",
-    "# assert np.allclose(np.round(np.mean(r), 3), 1.325)\n",
-    "# assert np.allclose(np.round(np.std(r), 3), 0.494)"
+    "assert np.allclose(np.round(np.mean(r), 3), 1.325)\n",
+    "assert np.allclose(np.round(np.std(r), 3), 0.494)"
    ]
   },
   {
