Questionable finish on HW5

--- a/HW5/Homework_05_FA25.ipynb
+++ b/HW5/Homework_05_FA25.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "66c4b786",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "d6d69af2",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "e429af1d",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "59e3ee65",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "cbb4cb77",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "0058127c",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[60]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(observed_counts, np.sum(observed_counts))\n\u001b[32m      6\u001b[39m expected_counts = signal_counts+bkg_counts\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m observed_counts[\u001b[32m0\u001b[39m] == \u001b[32m46\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m observed_counts[-\u001b[32m1\u001b[39m] == \u001b[32m64\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m np.sum(observed_counts) == \u001b[32m2087\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(observed_counts, np.sum(observed_counts))\n\u001b[32m      6\u001b[39m expected_counts = signal_counts+bkg_counts\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m observed_counts[\u001b[32m0\u001b[39m] == \u001b[32m46\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m observed_counts[-\u001b[32m1\u001b[39m] == \u001b[32m64\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m np.sum(observed_counts) == \u001b[32m2087\u001b[39m\n",
       "\u001b[31mAssertionError\u001b[39m: "
      ]
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "78739dfc",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a2de2165",
    "metadata": {},
    "outputs": [],
@@ -431,32 +431,66 @@
     "        Chi square\n",
     "    '''\n",
     "    # Implement your code below\n",
+    "    _, bkg_counts_fit = background(E_min, E_max, n_bins, B_fit)\n",
+    "    _, signal_counts_fit = signal(E_min, E_max, n_bins, E_0, sigma, S_fit)\n",
+    "    expected_counts_fit = signal_counts_fit + bkg_counts_fit\n",
+    "    chi2_value = np.sum((observed_counts - expected_counts_fit) ** 2 / expected_counts_fit)\n",
     "    return chi2_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1bb336a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.02334948563426\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m chi2_test = chi2(\u001b[32m50\u001b[39m, \u001b[32m2000\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(chi2_test)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m math.isclose(chi2_test, \u001b[32m48.4744\u001b[39m, abs_tol=\u001b[32m1e-2\u001b[39m)\n",
+      "\u001b[31mAssertionError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "chi2_test = chi2(50, 2000)\n",
+    "print(chi2_test)\n",
     "assert math.isclose(chi2_test, 48.4744, abs_tol=1e-2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bcd72989",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best-fit S: 72.25\n",
+      "Best-fit B: 1974.17\n",
+      "Best-fit chi-square: 34.95\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial guess of the parameters\n",
     "S_init = 100\n",
     "B_init = np.sum(observed_counts)\n",
     "# Implement your code below (only one line)\n",
-    "minuit = ...\n",
+    "minuit = Minuit(chi2, S_fit=S_init, B_fit=B_init)\n",
     "minuit.limits = [(0, None), (0, None)]\n",
     "minuit.migrad()  # Minimization\n",
     "\n",
@@ -475,10 +509,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4c531c4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m math.isclose(best_fit_S, \u001b[32m15.99\u001b[39m, abs_tol=\u001b[32m1e-2\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m math.isclose(best_fit_B, \u001b[32m2092.99\u001b[39m, abs_tol=\u001b[32m1e-2\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m math.isclose(chi2_min, \u001b[32m44.14\u001b[39m, abs_tol=\u001b[32m1e-2\u001b[39m)\n",
+      "\u001b[31mAssertionError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "assert math.isclose(best_fit_S, 15.99, abs_tol=1e-2)\n",
     "assert math.isclose(best_fit_B, 2092.99, abs_tol=1e-2)\n",
@@ -524,13 +570,13 @@
     "    # Implement your code below (replace \"...\" to your code)\n",
     "    # Perform a minimization for each fixed S_scan\n",
     "    # Hint: try Minuit(lambda B_fit: ... ) for a minuit fit with a fixed S_fit parameter\n",
-    "    m_fixed = ...\n",
+    "    m_fixed = Minuit(lambda B_fit: chi2(s, B_fit), B_fit=B_init)\n",
     "    m_fixed.limits = [(0, None)]\n",
     "    m_fixed.migrad()\n",
-    "    chi2_fixed = ...\n",
+    "    chi2_fixed = m_fixed.fval\n",
     "    \n",
     "    # Calculate q for this signal rate\n",
-    "    q = ...\n",
+    "    q = chi2_fixed - chi2_min\n",
     "    q_values.append(q)\n",
     "\n",
     "# Plot q vs. signal rate\n",
